# e-commerce-api

./: .env.example  .flaskenv  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  server.py
docs/: collections.http
src/e_commerce_api/: __init__.py  app.py
src/e_commerce_api/controllers/: __init__.py  cart_controller.py  product_controller.py  root_controller.py  user_controller.py
src/e_commerce_api/database/: __init__.py  database_config.py
src/e_commerce_api/models/: __init__.py  cart.py  product.py  product_in_cart.py  user.py
src/e_commerce_api/repositories/: __init__.py  product_repository.py  sqlite_product_repository.py
src/e_commerce_api/repositories/carts/: __init__.py  cart_repository.py  sqlite_cart_repository.py
src/e_commerce_api/repositories/products/: product_repository.py  sqlite_product_repository.py
src/e_commerce_api/repositories/users/: __init__.py  sqlite_user_repository.py  user_repository.py
src/e_commerce_api/routes/: __init__.py  cart_route.py  product_route.py  root_route.py  user_route.py
src/e_commerce_api/use_cases/: __init__.py  create_product_use_case.py  fetch_product_by_id_use_case.py  list_products_use_case.py  remove_product_by_id_use_case.py  update_product_by_id_use_case.py
src/e_commerce_api/use_cases/carts/: __init__.py  create_cart_use_case.py  fetch_cart_by_id_use_case.py
src/e_commerce_api/use_cases/factories/: make_create_product_use_case.py  make_fetch_product_by_id_use_case.py  make_list_products_use_case.py  (+2 more)
src/e_commerce_api/utils/: __init__.py  encryption.py
(+23 files in other folders)
