[tool.poetry]
name = "e-commerce-api"
version = "0.1.0"
description = ""
authors = ["luiz.fernando <luiz-fsilva37@hotmail.com>"]
readme = "README.md"
packages = [{include = "e_commerce_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-cors = "^4.0.1"
flask = "^3.0.3"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
dev = "server:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
